# elevenlabslib

./: .readthedocs.yaml  LICENSE  README.md  example.py  pyproject.toml  setup.py
.github/: FUNDING.yml
docs/: conf.py  docs-requirements.txt  index.rst
docs/source/: examples.md
docs/source/api/: class-index.rst  dub.rst  helpers.rst  historyitem.rst  model.rst  project.rst  pronunciation-dictionary.rst  sample.rst  user.rst  utils.rst  voice.rst
elevenlabslib/: Dub.py  ElevenLabsHistoryItem.py  ElevenLabsModel.py  ElevenLabsSample.py  ElevenLabsUser.py  ElevenLabsVoice.py  HistoryItem.py  Model.py  Project.py  PronunciationDictionary.py  Sample.py  User.py  Voice.py  __init__.py  _audio_cutter_helper.py  helpers.py  utils.py
elevenlabspy/: ElevenLabsHistoryItem.py  ElevenLabsSample.py  ElevenLabsUser.py  ElevenLabsVoice.py  __init__.py  helpers.py
