[build-system]
requires = ["setuptools>=61.0",
            "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elevenlabslib"
version = "0.3.3"
authors = [
  { name="lugia19", email="lugia19@lugia19.com" },
]
description = "Complete python wrapper for the elevenlabs API"
readme = "README.md"
requires-python = ">=3.7"
dependencies=[
    "requests",
    "typing",
    "sounddevice",
    "soundfile"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]

[project.urls]
"Homepage" = "https://github.com/lugia19/elevenlabslib"
"Bug Tracker" = "https://github.com/lugia19/elevenlabslib"