[build-system]
requires = ["setuptools>=61.0",
            "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elevenlabslib"
version = "0.15.0"
authors = [
  { name="lugia19", email="lugia19@lugia19.com" },
]
description = "Complete python wrapper for the elevenlabs API"
readme = "README.md"
requires-python = ">=3.7"
dependencies=[
    "requests",
    "sounddevice",
    "numpy",
    "soundfile >= 0.12.1",
    "websockets"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]

[project.urls]
"Documentation" = "https://elevenlabslib.readthedocs.io/en/latest/"
"Homepage" = "https://github.com/lugia19/elevenlabslib"
"Bug Tracker" = "https://github.com/lugia19/elevenlabslib"